--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>Document</title> 
 	</head> 
 	<body>
-		Hello Git World!	
+		Hello Git World!
+		<a href="profile_A.html"></a><br>
+		<a href="profile_B.html"></a><br>
 	</body> 
 </html>
