--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head> 
 	<body>
 		Hello Git World!
-		<a href="profile_A.html"></a><br>
-		<a href="profile_B.html"></a><br>
+		<a href="profile_A.html">A</a><br>
+		<a href="profile_B.html">B</a><br>
 	</body> 
 </html>
