--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Document</title> 
 	</head> 
 	<body>
-		Hello Git World!
+		Hello Git World!<br>
 		<a href="profile_A.html">A</a><br>
 		<a href="profile_B.html">B</a><br>
 	</body> 
